fixed img spacing in opac.md and ausleihe.md

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,6 +1,6 @@
 img {
     border-radius: 20px;
     box-shadow: 1px 10px 20px #222222;
-    max-width: 50%;
+    width: 90%;
     max-height: auto;
 }
